<resources>
    <string name="app_name">desafioFirebase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="fab">fab</string>
    <string name="created_at">Created at</string>
    <string name="save_game">Save Game</string>
    <string name="description">Description</string>
    <string name="lan_amento">Lançamento:</string>
</resources>