<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".auth.view.RegisterFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/email"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietEmailRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietPasswordRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/repeat_password"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConfirmSignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/vermelho"
                android:text="@string/create_account" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/pb_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>