<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    tools:context=".newgame.NewGameFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/addImgGame"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="155dp"
        android:layout_marginEnd="156dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/materialCardView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:src="@drawable/splash" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilNameGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietNameGame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilCreatedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/created_at"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietCreatedAt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/description"
                android:textColorHint="@color/azul_claro"
                app:boxBackgroundColor="@color/white"
                app:boxStrokeColor="@color/azul_claro">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/verde_lodo" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSaveGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/vermelho"
                android:text="@string/save_game" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>